Added ability to post only positive tweets; added form for loading positive tweets | semantic-tweets

--- a/week6/semantic-tweets/config/clients.example.yml
+++ b/week6/semantic-tweets/config/clients.example.yml
@@ -1,10 +1,12 @@
 development:
+    # create app at https://apps.twitter.com and fill out fields below
     twitter:
         api_key: ''
         api_secret: ''
         access_token: ''
         access_token_secret: ''
 
+    # create account at semantria website and fill out fields
     semantria:
         api_key: ''
         api_secret: ''
